--- a/geography-project/src/app/header/header.component.html
+++ b/geography-project/src/app/header/header.component.html
@@ -1,3 +1,30 @@
-<p>
-  header works!
-</p>
+<header>
+  <nav class="navbar bg-info">
+    <ul class="nav nav-pills">
+      <li class="nav-item">
+        <a href="#" class="nav-link">Home</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link">Asia</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link">Europe</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link">Africa</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link">North America</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link">South America</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link">Australia</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link">Antarctica</a>
+      </li>
+    </ul>
+  </nav>
+</header>
