adding all continent maps

--- a/geography-project/src/app/antarctica/antarctica.component.html
+++ b/geography-project/src/app/antarctica/antarctica.component.html
@@ -1,3 +1,7 @@
-<p>
-  antarctica works!
-</p>
+<div class="row">
+  <div class="col-lg-6">
+    <div class="container-fluid">
+      <img class="img-responsive" src="../../assets/img/antarctica.jpg" alt="Europe">
+    </div>
+  </div>
+</div>
