--- a/geography-project/src/app/world/world.component.html
+++ b/geography-project/src/app/world/world.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-lg-10">
     <div class="container-fluid">
-      <img class="img-responsive" src="../../assets/img/europe.jpg" alt="Europe">
+      <img class="img-responsive" src="../../assets/img/the_world.jpg" alt="Europe">
     </div>
   </div>
 </div>
