--- a/geography-project/src/app/south-america/south-america.component.html
+++ b/geography-project/src/app/south-america/south-america.component.html
@@ -1,3 +1,7 @@
-<p>
-  south-america works!
-</p>
+<div class="row">
+  <div class="col-lg-6">
+    <div class="container-fluid">
+      <img class="img-responsive" src="../../assets/img/south_america.jpg" alt="Europe">
+    </div>
+  </div>
+</div>
